--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="pins">
                 <div class="wrapper">
                     <table>
-                        <caption style="color: black;">High Scores (total 20)</caption>
+                        <caption style="color: black;">WC Points Table</caption>
                         <tr>
                             <th>Pos</th>
                             <th>Country</th>
