--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
                         India, who are also better placed to win the race to develop the next generation of critical
                         technologies</p>
                 </div>
+                
             </div>
             <div class="article big">
                 <img
                     src="https://www.hindustantimes.com/ht-img/img/2023/11/04/550x309/Delhi-s-air-quality-index-on-Wednesday-was-364---V_1698862762680_1699070152215.jpg">
                 <div class="articlecontent">
-                    <h2 class="article-title">Morning brief: Delhi blames UP for sending BS3, BS4 vehicles; Israel PM
-                        rejects ceasefire calls, and all the latest news</h2>
+                    <a href="https://www.hindustantimes.com/india-news/morning-brief-delhi-blames-up-for-sending-bs3-bs4-vehicles-israel-pm-rejects-ceasefire-calls-and-all-the-latest-news-101699067787357.html"><h2 class="article-title">Morning brief: Delhi blames UP for sending BS3, BS4 vehicles; Israel PM
+                        rejects ceasefire calls, and all the latest news</h2></a>
                     <p>The air quality in Delhi continued to be in the severe category for the third consecutive day on
                         Saturday, with an AQI (Air Quality Index) of 413 recorded at 7 am. During a late-night
                         inspection at Anand Vihar bus terminus on Friday, Delhi environment minister Gopal Rai,
@@ -91,8 +92,8 @@
             <div class="article small">
                 <img
                     src="https://lh3.googleusercontent.com/FvRl5ZzboJ4Cid-hYc0hj9uFmfQgSV85Ka9JCbh6hW8fnCqkYedJ65kL2VPXdSAT7gX2Zoa4zad-VaSjJr2louMK2X1PHGpVmU5qRqbkfEHFn8xczjWQqHZ_sJMbbXisAQBhh1sAVp3KuD-pRbwpNMJ1Ck2BsQK4fayGUU0BcqihB6GJF04rf_kDUs-2Gk7G4-MCfw4GUvlCHtDdBkfR99NY6D6oGwQxlNggqY5ksTX4Nh_wHLjwhaufIMp6XlPFO847w9M_VQV4pVYFf4nZ8YWGTHEiVRFgh3-WwTZNzoyv2btOjySyUC6lsArD-1q6H0m2lgG-qZ5HJBfIG3XtTQs5VK9bKSDwQR1aaieaiqHDFrvYPXdGjLAdz_X3jKH9-hHXnNlN-kDomloOGX6q6RpPgPZxa_eWHEBCiA89u6VSU2HzAvfAq20Gkx3DV_opG2ym3j-Wtf1aCfiFE2wCXVKw3JmQZ0NP04Q2CFRH6Zc8-pu2owkzs0TSvjSnhGivXwhLVpMEszt3-I5qmA7xxKmSvpv_84Y_ZaThmZOgbM2mvegm_B1ows0uKwSoXBh8fkqPMZm6t17rbdvtFXAJyhk95KAd4d2MGmoU-WaAkKWwJwmJO3lT1I_aFcGRSXiQzXZdJU97pS8-B4Myo3VVPBVru-cNShvLcN1FJeZm=w307-h173-no">
-                <div class="articlecontent">
-                    <h2 class="article-title">Meet Gaggan Anand, the 'world's best' Indian chef</h2>
+                <a href="https://edition.cnn.com/travel/article/bangkok-chef-gaggan-anand/index.html"><div class="articlecontent">
+                    <h2 class="article-title">Meet Gaggan Anand, the 'world's best' Indian chef</h2></a>
                     <p>Gaggan was sitting in a Singapore ballroom attending the Asia's 50 Best Restaurant Awards,
                         waiting in agony to find out whether his eponymous Bangkok-based restaurant could hold onto the
                         number three spot it grabbed last year "As they got to five, then four, and my name hadn't been
@@ -104,8 +105,8 @@
             <div class="article small">
                 <img
                     src="https://lh3.googleusercontent.com/ixrNTtsZ_M-3Q038yOT8Q0HKagba6dkZPzgirdN9mX8WZ8BoJSjjrxtd6XYlLVyOh8wVFUN3kW7WjN327zfjghhp-XvTO_5H5zmDQ70ZEp2hlQF_rQrIJqviVOJsxVeXi52pHH2Shp4HKO25e9xtnutE_bYju675bmS3HO9UVOAGYGxqScqt-_HCOGmZkDUvpNdFAI40C9f-FJkhinmMparsOojkZVA5otPzhCd4L8OqGTgtkFC0uO1ISJKbleSzimuLT4Cqlpa4SXTWlC2zKxOplR2Ukp9CZOcc7Vig6KsJ0mxn37BJpHV4e7KqyZpTdOqeTyNHJpo8sr-EB1MMRVlPNudxSfIX-yaDTMGyjPBCiEW44KrCpCj32NRi3z04CzWdtkOduMz1Ia5m3r1uR3C_DtfPz75Jplzz7o42FATU8mjlpIolw9FVkbPVP_2RHu1q3rsU5TGkdNWR7IGmq24vAbWbo2puqQCH2adpX7LbBpLcnSyrzYSMz0zXGHyo3olxnUr4yTaX3g5rd4Me8Fgdr4Z9f3z3sA10vQPPSwjaI_ekZ-JwRskkz6vzVYf0WLW5kUPmjgtS-eNZGWN2VZ6Z4TpEuEiOVuHMh5zUoLYYxAQKUNdGXoH0_nWIZUngfJ2EKOuYi8k38cHpr3XhF3XjYbmMW6m9bAJDcK47=w1100-h619-no">
-                <div class="articlecontent">
-                    <h2 class="article-title">The best things to do and see in Shimla</h2>
+                <a href="https://www.thrillophilia.com/things-to-do-in-shimla"><div class="articlecontent">
+                    <h2 class="article-title">The best things to do and see in Shimla</h2></a>
                     <p> Shimla, the most sought after hill station, needs no introduction. Its lush greenery, pleasant
                         climate, and snow-clad hills have attracted tourists for years. With a plethora of activities
                         and places to visit in Shimla, the Queen of Hills offers more than you can hold onto. But before
@@ -117,7 +118,7 @@
                 <img
                     src="https://lh3.googleusercontent.com/RB7kM8phJgRqrrmT9gxyKiqMJ1zrmq4wxeTUfectRaBfT497cMwncRpxWYzVHWrMgP6m3disLn_ICDLoxL1Y3O0yOrczyu26eLtZhCU9fOh_LFV-QqOLFDth3yL0VfNKi_APMEJqBZxk9q2ud9VE-vrgHs0bTv1UNAlw_aJo7TCHr6dOT7toE02L1V_pXzSTobTwuXD5Lrzc55wamCw1L76lZXqZmltoh6319WIZPf4OMfxVJ5xU55PuCWgBNzs_gcIdnsmziOjFLQ2K7dYFSct74LkR4rpTINX1wM31GEW8FDc6JZiTxs92KTWFd5aXpKgbrR0PLmvpc6UzMtOtTZ6ilAG_9OmDpE3c9TV6Jn0PKW_4JLcauuhz0brh8QeqTstdUTsrBRvkZaI5NknzfdxaSaKpKjkregB9e0b99RJUvpfqFAvELW92XE3TQFBkqdOQkMkQFhhz5wWqhm3ZCh62fdmy60ZHiDFW9A8FK3LGu-s2YirbL4PIMq9K-KX2XKA6D8QK6X4oCQHhpBNI2B44pYFLtY44qr_iJAF-5KWp_znkeb_BwSPb-xDpDs6j8liNId_6DDBy02g0WenGzCC51lZ9LJVw8LOyMtU6Ja3LV1oHQgZFVyaLCXD1Zd80kQ05L9qOmX8s3A0fGdk1vALhEnhDuS9WbxDn-eHh=w273-h184-no">
                 <div class="articlecontent">
-                    <h2 class="article-title">Sixteen Dogs Find Forever Homes After Being Rescued</h2>
+                    <a href="https://www.visithawthorn.com/shopnow/product/rescue-dog-tales-the-story-of-arthur-and-sixteen-dogs-who-found-forever-homes-barbarasbookstore-0fc44b"><h2 class="article-title">Sixteen Dogs Find Forever Homes After Being Rescued</h2></a>
                     <p>Just minutes before the Humane Society Shelter in Bangor, Maine closed for the day on Tuesday,
                         they only had one lone puppy left who had yet to be adopted. Not to worry however, that puppy
                         too found a great forever home, marking the end of an amazing campaign to save some dogs on
@@ -131,7 +132,7 @@
                 <img
                     src="https://lh3.googleusercontent.com/s4drGMtU6AaHz43tf95K1bni6Qs8THokpd-6ddI1r_xzVHbo9OGnAsvAitgewnT2hbVp22-TNP7cvqgGbaPbnRdGeXmTs8A_Fknt1aHtZzQr0xlSw_X74l02bwuiHQF2g_WFMGdjQkQVs1nWi-oZkbsGLtqNNv10WNgYE1ND5cLrxOtA0liuLEi2q1HUJ0Yesl3YMwlL1-WdUOxI9GepODLOqbBPMoeltg05G1_x0OQauGjMVl2K4WTs5n3SJmqv2FI3Itnt_55J3m6Wz3sL0EtszXAhE55o7wwaP1cUiyYf9UTpb3JHcHZmIw7Nvcxn31vBbu7oxN872xZWBT4brXfHuR5yaUM7T3GwciSqdEAddGgGk1aIRBtUxZJtRLBETW4wOathkCpkteaezohUDdYoVISJb1JechGv_P6GSLhSAGPxLa3rWVAqbM3lfq_CUQgWq3PwyTu3s0C3fzbv3E6B83AtjKvUrAcFgnfO0wq7Otu2TvsfA6CxVlWFcXyWIgHlu9qRDGDZ9_65Px5mlGohG62cDz0Gdxuxt-Sv6BRPK-o1IS3trmoKpqZm0Zxpco8Lz20HfqBi4Pz3O3GM8JQD82C1IodAnVIx2eTfpLtnAD7nMchey0EYgr2H1F1sKAFGzlK_DcOLp-IUB3Uz7lf2Xzf5I2PFJTY8QjXk=w299-h168-no">
                 <div class="articlecontent">
-                    <h2 class="article-title">What Facebook's new mission can and can't fix</h2>
+                    <a href="https://www.wired.com/story/facebooks-new-mission-video-will-bring-us-together/"><h2 class="article-title">What Facebook's new mission can and can't fix</h2></a>
                     <p>With nearly 2 billion people around the world checking in monthly, it makes sense that Facebook
                         is dealing with some very sticky issues. The social network is facing increasing pressure to
                         address them head on.
