--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>News Daily</title>
+    <title>NewsletterNook</title>
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <h1 style="color: black;">News Daily</h1>
+            <h1 style="color: black;">NewsletterNook: Your Source for Updates</h1>
             <h6>08/11/2023 Wednesday</h6>
         </div>
         <div class="news">
@@ -245,9 +245,9 @@
             <div class="pins container2">
                 <img class="img-head"
                     src="https://raw.githubusercontent.com/emnatkins/cdn-codepen/main/LYJWgdK/LYJWgdK.mail.jpg"
-                    alt="subscribe to email">
+                    alt="Subscribe to email">
                 <h1 class="title">subscribe</h1>
-                <p class="description">subscribe to our newsletter & stay updated</p>
+                <p class="description">Subscribe to our newsletter & stay updated</p>
                 <div class="form-box">
                     <div class="input-main">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -289,7 +289,7 @@
                     <li><a href="#">Culture</a></li>
                     <li><a href="#">Future</a></li>
                     <li><a href="#">Gadget</a></li>
-                    <li><a href="#">Bussiness</a></li>
+                    <li><a href="#">Business</a></li>
                 </ul>
             </div>
         </div>
